--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 							<div class="column">
 								<div class="field">
 									<label for="quantity">Cantidad de pasajeros</label>
-									<input type="text" name="quantity" id="quantity" pattern="[0-9]*" oninput="validateNumberInput(this)" required>
+									<input type="text" name="quantity" id="quantity" pattern="[0-9]*"
+										oninput="validateNumberInput(this)" required>
 								</div>
 								<div class="field">
 									<label for="contactEmail">Email de contacto</label>
@@ -102,7 +103,7 @@
 							</div>
 						</div>
 						<div class="actions">
-							<button type="submit" class="button">Enviar Cotización</button>
+							<button type="submit" class="button">Enviar</button>
 						</div>
 						<input type="hidden" name="_next" value="https://bairesjet.com">
 						<input type="hidden" name="_captcha" value="false">
@@ -110,9 +111,9 @@
 				</div>
 			</div>
 		</section>
-		
-<!-- Modal -->
-<div id="modalForm" class="modalForm">Enviado</div>
+
+		<!-- Modal -->
+		<div id="modalForm" class="modalForm">Enviado</div>
 
 		<!-- SERVICIOS -->
 		<section>
