--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
 
 		<!-- Banner -->
 		<section id="banner" style="background-image: url('img/recursos/fondo1.jpg');">
+			<div id="languageSwitch">
+				<p>idiomas</p>
+				<div>
+					<button onclick="changeLanguage('es')"><img src="/img/recursos/es.png" alt="Español"></button>
+					<button onclick="changeLanguage('en')"><img src="/img/recursos/in.png" alt="English"></button>
+				</div>
+			</div>
 			<div class="inner">
 				<h1 class="major">Disfruta la Exclusividad de los Vuelos Privados</h1>
 				<p>¡Obtén cotizaciones rápidas y personalizadas para tu viaje de lujo!</p>
@@ -318,7 +325,6 @@
 			<span id="textoBoton"><strong>Cotiza<br>rápido</strong></span>
 			<i id="botonFlotante" class="fab fa-whatsapp"></i>
 		</div>
-
 
 
 	</div>
